# my-openenv

./: .dockerignore  Dockerfile  README.md  __init__.py  client.py  generate_samples.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_all_levels.py
data/: easy_samples.json  hard_samples.json  medium_samples.json
server/: Dockerfile  app.py  dataset_loader.py  environment.py  grader.py  requirements.txt
